--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlinx-serialization'
 
-//firebase
-apply plugin: 'com.google.gms.google-services'
-
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.1"
+    buildToolsVersion "30.0.2"
     defaultConfig {
         multiDexEnabled true
-        applicationId "edu.amrita.amritacafe4"
+        applicationId "edu.amrita.amritacafe.vegetables"
         minSdkVersion 16
         targetSdkVersion 16
         versionCode 1
@@ -100,9 +97,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.1"
 
     //androidx
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
     // something
@@ -116,9 +113,9 @@ dependencies {
 
     //multidex
     implementation 'androidx.multidex:multidex:2.0.1'
-
-    // GSON json conversion
-    implementation 'com.google.code.gson:gson:2.8.6'
+//
+//    // GSON json conversion
+//    implementation 'com.google.code.gson:gson:2.8.6'
 
 //    security thingy
     implementation 'org.conscrypt:conscrypt-android:2.4.0'
