--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,17 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlinx-serialization'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlinx-serialization'
+}
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdk 34
+
     defaultConfig {
         multiDexEnabled true
         applicationId "edu.amrita.amritacafe.vegetables"
-        minSdkVersion 16
-        targetSdkVersion 16
+        minSdkVersion 19
+        targetSdkVersion 22
         versionCode 1
         versionName "v2.8"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -21,8 +20,7 @@ android {
         }
 
         ndk {
-            abiFilters 'armeabi-v7a','arm64-v8a', 'x86'
-//            abiFilters 'armeabi' //, 'x86', ' 'x86_64', 'arm64-v8a'//如果你设备其它架构，默认不添加，否则会出错
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
         }
     }
 
@@ -30,15 +28,12 @@ android {
     productFlavors {
         tour {
             dimension "version"
-//            applicationIdSuffix ".demo"
-//            versionNameSuffix "-demo"
         }
         amritapuri {
             dimension "version"
-//            applicationIdSuffix ".full"
-//            versionNameSuffix "-full"
         }
     }
+
     signingConfigs {
         release {
             storePassword 'amrita'
@@ -47,9 +42,11 @@ android {
             storeFile file('../AmritaCafeKeyStore')
         }
     }
+
     applicationVariants.all { variant ->
         variant.resValue "string", "versionName", variant.versionName
     }
+
     buildTypes {
         release {
             signingConfig signingConfigs.release
@@ -59,64 +56,70 @@ android {
             signingConfig signingConfigs.release
         }
     }
-    lintOptions {
-        abortOnError false
-    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    viewBinding {
+        enabled = true
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+//        freeCompilerArgs += "-Xjvm-default=compatibility"
+    }
+
     configurations {
         all*.exclude group: 'com.google.guava', module: 'listenablefuture'
         all*.exclude module: 'guava-jdk5'
     }
 
     packagingOptions {
-        exclude 'META-INF/androidx.preference_preference.version'
-        exclude 'kotlin/collections/MapWithDefault.kotlin_metadata'
+        resources {
+            excludes += ['META-INF/androidx.preference_preference.version', 'kotlin/collections/MapWithDefault.kotlin_metadata']
+        }
     }
 
     sourceSets {
         main {
             jniLibs.srcDirs = ['src/main/jniLibs/']
         }
-
     }
 
+    namespace 'edu.amrita.amritacafe'
+
+    lint {
+        abortOnError false
+    }
+}
+
+repositories {
+    google()
+    mavenCentral()
 }
 
 dependencies {
-    //kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.20"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-core:1.6.0"
 
-    //androidx
+    // AndroidX
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
-    // something
-    implementation 'com.github.kittinunf.fuel:fuel:2.2.0'
-    implementation 'com.github.kittinunf.fuel:fuel-coroutines:2.2.0'
-    implementation 'com.github.kittinunf.fuel:fuel-kotlinx-serialization:2.1.0'
-
-    // for mail? i dont remember...
+    // RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 
-    //multidex
+    // Multidex
     implementation 'androidx.multidex:multidex:2.0.1'
-//
-//    // GSON json conversion
-//    implementation 'com.google.code.gson:gson:2.8.6'
 
-//    security thingy
+    // Security
     implementation 'org.conscrypt:conscrypt-android:2.4.0'
 }
